--- a/notebooks/1.0-explore-data.ipynb
+++ b/notebooks/1.0-explore-data.ipynb
@@ -323,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('torch')",
+   "display_name": "Python 3.10.4 ('tensorflow')",
    "language": "python",
    "name": "python3"
   },
@@ -337,12 +337,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1315e6714f2518a6216a6eec3b047587d10875bf19b853b35d3e5c84c569e2a"
+    "hash": "4bd624a0593993fe43ac4046b27b898fb2ef75c21c08f81e89e64ea0f51df676"
    }
   }
  },
